Fix -Xlint:rawtypes,cast warnings
javac with the -Xlint option  produces many warning (> 1000).
Fixed a part of these warnings (~450).